# python-missive

./: .bandit  .flake8  .gitignore  .semgrep.yaml  README.md  dev.py  env.example  mypy.ini  pyproject.toml  requirements-all.txt  requirements-apn.txt  requirements-branded.txt  requirements-brevo.txt  requirements-dev.txt  requirements-email.txt  requirements-fcm.txt  requirements-mailgun.txt  requirements-postal.txt  requirements-push.txt  requirements-sendgrid.txt  requirements-ses.txt  requirements-slack.txt  requirements-sms.txt  requirements-teams.txt  requirements-telegram.txt  requirements-twilio.txt  requirements-vonage.txt  requirements.txt  test_providers.py
.cursor/rules/: assistant-guidelines.md
scripts/: test_providers_import.py
src/pymissive/: helpers.py
src/python_missive/: __init__.py  address.py  helpers.py  sender.py
src/python_missive/address_backends/: __init__.py  base.py  geoapify.py  geocode_earth.py  google_maps.py  here.py  locationiq.py  mapbox.py  maps_co.py  nominatim.py  opencage.py  photon.py
src/python_missive/providers/: __init__.py  apn.py  ar24.py  brevo.py  certeurope.py  django_email.py  fcm.py  laposte.py  maileva.py  mailgun.py  notification.py  sendgrid.py  slack.py  smspartner.py  smtp.py  teams.py  telegram.py  twilio.py
src/python_missive/providers/base/: __init__.py  branded.py  common.py  email.py  monitoring.py  notification.py  postal.py  sms.py  voice_call.py
tests/: __init__.py  test_address.py  test_base_provider_common.py  test_config.py  test_helpers.py  test_providers.py
