[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-missive"
version = "0.1.0"
description = "Framework-agnostic utilities extracted from Django Missive."
authors = [{ name = "Charl", email = "charl@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.urls]
Homepage = "https://example.com/python-missive"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
# Ignore mixin attribute errors (they are provided by BaseProvider)
[[tool.mypy.overrides]]
module = [
    "python_missive.providers.base.*",
]
ignore_errors = true
